--- a/index.html
+++ b/index.html
@@ -3,29 +3,28 @@
     <head>
         <title>Sean Jasmins-Nelson</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
-
     <body> 
         <header>
             <h1>Sean Jasmins-Nelson</h1>
         </header>
-
         <main>
             <h2>COMP213 Semester 1 Winter 2025</h2>
-
             <section>
                 <h3>My Favourite Activities</h3>
-                <p>- Playing video games<br>
-                    - Watching movies and TV<br>
-                    - Spending time with family
-                </p>
+                <ul>
+                    <li>Playing video games</li>
+                    <li>Watching movies and TV</li>
+                    <li>Spending time with my family</li>
+                </ul>
             </section>
+            <img src="dog.jpg" alt="Dog winking" style="width:600px;height:490px;">
         </main>
     </body>
-
     <footer>
         <p>Sean Jasmins-Nelson 301127049</p>
     </footer>
-
     <!--Sean Jasmins-Nelson 301127049-->
 </html>
