--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h1>Sean Jasmins-Nelson</h1>
         </header>
         <main>
-            <h2>COMP213 Semester 1 Winter 2025</h2>
+            <h2>COMP213 Winter 2025</h2>
             <section>
                 <h3>My Favourite Activities</h3>
                 <ul>
@@ -20,11 +20,11 @@
                     <li>Spending time with my family</li>
                 </ul>
             </section>
-            <img src="dog.jpg" alt="Dog winking" style="width:600px;height:490px;">
+            <img src="dog.jpg" alt="Dog winking" width="600px" height="490px">
         </main>
+        <footer>
+            <p>Sean Jasmins-Nelson 301127049</p>
+        </footer>
     </body>
-    <footer>
-        <p>Sean Jasmins-Nelson 301127049</p>
-    </footer>
     <!--Sean Jasmins-Nelson 301127049-->
 </html>
