--- a/index.html
+++ b/index.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Sean Jasmins-Nelson</title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
-    </head>
-    <body> 
-        <header>
-            <h1>Sean Jasmins-Nelson</h1>
-        </header>
-        <main>
-            <h2>COMP213 Winter 2025</h2>
-            <section>
-                <h3>My Favourite Activities</h3>
-                <ul>
-                    <li>Playing video games</li>
-                    <li>Watching movies and TV</li>
-                    <li>Spending time with my family</li>
-                </ul>
-            </section>
-            <img src="dog.jpg" alt="Dog winking" width="600px" height="490px">
-        </main>
-        <footer>
-            <p>Sean Jasmins-Nelson 301127049</p>
-        </footer>
-    </body>
-    <!--Sean Jasmins-Nelson 301127049-->
+  <head>
+    <title>Sean Jasmins-Nelson</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <header>
+      <h1>Sean Jasmins-Nelson</h1>
+    </header>
+    <main>
+      <h2>COMP213 Winter 2025</h2>
+
+      <section>
+        <h3>My assignments</h3>
+        <ul>
+          <li><a href="./Assignment3/assignment3.html">Assignment 3</a></li>
+        </ul>
+      </section>
+      <section>
+        <h3>My Favourite Activities</h3>
+        <ul>
+          <li>Playing video games</li>
+          <li>Watching movies and TV</li>
+          <li>Spending time with my family</li>
+        </ul>
+      </section>
+      <img src="dog.jpg" alt="Dog winking" width="600px" height="490px" />
+    </main>
+    <footer>
+      <p>Sean Jasmins-Nelson 301127049</p>
+    </footer>
+  </body>
+  <!--Sean Jasmins-Nelson 301127049-->
 </html>
