--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     </header>
     <main>
       <h2>COMP213 Winter 2025</h2>
-
       <section>
         <h3>My assignments</h3>
         <ul>
           <li><a href="./Assignment3/assignment3.html">Assignment 3</a></li>
+          <li><a href="./Assignment4/assignment4.html">Assignment 4</a></li>
         </ul>
       </section>
       <section>
