--- a/Assignment3/assignment3.html
+++ b/Assignment3/assignment3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Sean Jasmins-Nelson</title>
+    <title>Assignment 3</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
   </head>
