Finished Term Project

--- a/TermProject/homepage.html
+++ b/TermProject/homepage.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Assignment 4</title>
+    <title>Sunnyside Crepes - Home</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <header>
     <img
-      src="./logo-placeholder.png"
-      alt="The words COMP 213 repeated thrice vertically"
-      width="120px"
+      src="./crepe_logo.png"
+      alt="Logo of a crepe"
+      width="100px"
       height="100px"
     />
-    <h1>Escape To Crepes!</h1>
+    <h1>Sunnyside Crepes</h1>
   </header>
   <nav>
     <ol>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Menu</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><a href="#">Sitemap</a></li>
+      <li id="activeLink"><a href="#">Home</a></li>
+      <li><a href="./items.html">Menu</a></li>
+      <li><a href="./contact.html">Contact</a></li>
+      <li><a href="./sitemap.html">Sitemap</a></li>
     </ol>
   </nav>
   <main>
@@ -41,20 +41,33 @@
     <h2>Areas Served</h2>
     <h3>Southern Ontario</h3>
     <ul>
-        <li>Kingston</li>
-        <li>Toronto</li>
-        <li>Ottawa</li>
-        <li>London</li>
+      <li>Kingston</li>
+      <li>Toronto</li>
+      <li>Ottawa</li>
+      <li>London</li>
     </ul>
+    <h2>Customer Feedback</h2>
+    <p>"The greatest crepes I have ever had in my life!" - Kelly Swanson</p>
+    <p>"I love the ones with nutella!" - Timmy Dulce</p>
+    <p>
+      "I would eat here every day if I could! The owner is just so nice and the
+      food is amazing!" - Bobby Nicely
+    </p>
+  </main>
   <aside>
     <img
-      src="./crepe_aside.png"
-      alt="2 Candles on a table"
+      src="./stevesmith.png"
+      alt="Portrait of Steve Smith, Owner"
       width="300px"
       height="390px"
     />
+    <p>Phone #: (613) 222-555</p>
+    <p>
+      Email:
+      <a href="mailto:sunnysidecrepes@gmail.com">sunnysidecrepes@gmail.com</a>
+    </p>
   </aside>
   <footer>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+    <p>Copyright © 2025</p>
   </footer>
 </html>
